--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,18 @@
-<h1>Available Products</h1>
+<h1><%= @category.name %></h1>
 
 <div class="products">
   <% @products.each do |product| %>
     <div class="product">
-      <h2><%= link_to product.name, product_path(product) %></h2>
+      <h2><%= link_to product.name, category_product_path(@category, product) %></h2>
       <p><%= product.description %></p>
       <p>Price: <%= number_to_currency(product.price) %></p>
       <%= image_tag product.img_src if product.img_src.present? %>
     </div>
   <% end %>
 </div>
+
 <div class="pagination">
   <%= paginate @products %>
 </div>
+
+<%= link_to 'Back to Categories', categories_path %>
