--- a/app/views/products/new_products.html.erb
+++ b/app/views/products/new_products.html.erb
@@ -1,9 +1,5 @@
-<h1>Available Products</h1>
-<%= form_tag(search_products_path, method: :get) do %>
-  <%= text_field_tag :keyword, params[:keyword], placeholder: 'Enter keyword to search' %>
-  <%= select_tag :category_id, options_for_select(Category.all.map{ |c| [c.name, c.id] }, params[:category_id]), include_blank: 'All Categories' %>
-  <%= submit_tag 'Search' %>
-<% end %>
+<h1>New Products</h1>
+
 <div class="products">
   <% @products.each do |product| %>
     <div class="product">
@@ -14,6 +10,7 @@
     </div>
   <% end %>
 </div>
+
 <div class="pagination">
   <%= paginate @products %>
 </div>
