Edit the content of the website’s contact and about page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
  <body>
   <%= link_to 'Home', root_path %> |
+  <%= link_to 'About', about_page_path %> |
+  <%= link_to 'Contact', contact_page_path %> |
   <%= link_to 'New Products', new_products_products_path %> |
   <%= link_to 'Recently Updated Products', recently_updated_products_path %> |
 <%= link_to 'Admin', admin_root_path %>
