Add various products to a shopping cart saved in session

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,6 +5,6 @@
 
 <p><%= @product.description %></p>
 <p>Price: <%= number_to_currency(@product.price) %></p>
-
+<%= button_to 'Add to Cart', add_item_cart_path(product_id: @product.id), method: :post %>
 
 <%= link_to 'Back to Products', products_path %>
