--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -33,3 +33,9 @@
 </table>
 
 <h2>Total: <%= number_to_currency(@cart.items.sum { |item| item.product.price * item.quantity }) %></h2>
+
+<% if @order %>
+  <%= link_to 'Proceed to Checkout', order_path(@order), class: 'btn btn-primary' %>
+<% else %>
+  <%= link_to 'Proceed to Checkout', new_order_path, class: 'btn btn-primary' %>
+<% end %>
