--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,40 +1,17 @@
-<!-- app/views/carts/show.html.erb -->
-<h1>Your Shopping Cart</h1>
+<h1>Your Cart</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Product</th>
-      <th>Quantity</th>
-      <th>Price</th>
-      <th>Total</th>
-      <th>Remove Itemss</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.product.name %></td>
-        <td>
-          <%= form_with model: [@cart, item], url: update_item_cart_path(@cart, id: item.id), method: :patch, local: true do |f| %>
-            <%= f.number_field :quantity, value: item.quantity, min: 1 %>
-            <%= f.submit 'Update' %>
-          <% end %>
-        </td>
-    <td><%= number_to_currency(item.product.price.to_d) %></td>
-    <td><%= number_to_currency(item.product.price.to_d * item.quantity) %></td>
-
-        <td>
-         <td>
-  <%= link_to 'Remove', remove_item_cart_path(product_id: item.product.id), method: :delete %>
-</td>
-
-        </td>
-      </tr>
+<% if @cart_items.any? %>
+  <ul>
+    <% @cart_items.each do |item| %>
+      <li>
+        <%= item[:product].name %> - <%= item[:quantity] %> x <%= number_to_currency(item[:product].price) %>
+        = <%= number_to_currency(item[:total_price]) %>
+        <%= button_to 'Remove', remove_item_cart_path(product_id: item[:product].id), method: :delete %>
+      </li>
     <% end %>
-  </tbody>
-</table>
+  </ul>
 
-<h2>Total: <%= number_to_currency(@cart.items.sum { |item| item.product.price.to_d * item.quantity }) %></h2>
-
-<%= link_to 'Proceed to Checkout',  new_order_path, class: 'btn btn-primary' %>
+  <p>Total: <%= number_to_currency(@cart_items.sum { |item| item[:total_price] }) %></p>
+<% else %>
+  <p>Your cart is empty.</p>
+<% end %>
