--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,6 +5,11 @@
 
 <p><%= @product.description %></p>
 <p>Price: <%= number_to_currency(@product.price) %></p>
-<%= button_to 'Add to Cart', add_item_cart_path(product_id: @product.id), method: :post %>
+
+<%= form_with url: add_item_cart_path, local: true do |form| %>
+  <%= form.hidden_field :product_id, value: @product.id %>
+  <%= form.number_field :quantity, value: 1, min: 1 %>
+  <%= form.submit "Add to Cart" %>
+<% end %>
 
 <%= link_to 'Back to Products', products_path %>
