--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -12,6 +12,8 @@
   </ul>
 
   <p>Total: <%= number_to_currency(@cart_items.sum { |item| item[:total_price] }) %></p>
+
+  <%= link_to 'Proceed to Checkout', new_checkout_path, class: 'btn btn-primary' %>
 <% else %>
   <p>Your cart is empty.</p>
 <% end %>
