--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,13 @@
           <% end %>
         </div>
       </div>
+       <% if customer_signed_in? %>
+      <%= link_to 'Edit Profile', edit_customer_registration_path %>
+      <%= link_to 'Logout', destroy_customer_session_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Sign Up', new_customer_registration_path %>
+      <%= link_to 'Login', new_customer_session_path %>
+    <% end %>
     </nav>
   </header>
   <%= yield %>
