--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
       </div>
        <% if customer_signed_in? %>
       <%= link_to 'Edit Profile', edit_customer_registration_path %>
+       <%= link_to 'Past Orders', past_orders_customer_path(current_customer) %> |
     <%= link_to 'Logout', destroy_customer_session_get_path %>
 
     <% else %>
