--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,3 +56,25 @@
     color: #fff;
     border-color: #007bff;
 }
+
+/* app/assets/stylesheets/application.css */
+.flash {
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
+
+.flash.notice {
+    background-color: #dff0d8;
+    color: #3c763d;
+}
+
+.flash.alert {
+    background-color: #f2dede;
+    color: #a94442;
+}
+
+.flash.error {
+    background-color: #f2dede;
+    color: #a94442;
+}
