Make use of Rails “View Partials” to optimize the ERB views used for the website.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,8 @@
     justify-content: space-between;
 }
 
+@import "application.tailwind";
+
 .product {
     border: 1px solid #ddd;
     padding: 10px;
