--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,39 +8,10 @@
     <%= csp_meta_tag %>
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 <%= javascript_importmap_tags %>
-
-
     <%= javascript_importmap_tags %>
   </head>
  <body>
-  <header>
-    <nav>
-      <%= link_to 'Home', root_path %> |
-      <%= link_to 'About', about_page_path %> |
-      <%= link_to 'Contact', contact_page_path %> |
-      <%= link_to 'New Products', new_products_products_path %> |
-      <%= link_to 'Recently Updated Products', recently_updated_products_path %> |
-      <%= link_to 'Admin', admin_root_path %> |
-      <div class="dropdown">
-      
-        <div class="dropdown-content">
-          <% Category.all.each do |category| %>
-            <%= link_to category.name, category_path(category) %>
-          <% end %>
-        </div>
-      </div>
-       <% if customer_signed_in? %>
-      <%= link_to 'Edit Profile', edit_customer_registration_path %>
-       <%= link_to 'Past Orders', past_orders_customer_path(current_customer) %> |
-    <%= link_to 'Logout', destroy_customer_session_get_path %>
-
-    <% else %>
-      <%= link_to 'Sign Up', new_customer_registration_path %>
-      <%= link_to 'Login', new_customer_session_path %>
-
-    <% end %>
-    </nav>
-  </header>
+  <%= render 'layouts/header' %>
    <% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
