--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,8 +17,9 @@
        <% if customer_signed_in? %>
       <%= link_to 'Edit Profile', edit_customer_registration_path %>
        <%= link_to 'Past Orders', past_orders_customer_path(current_customer) %> |
-    <%= link_to 'Logout', destroy_customer_session_get_path %>
-
+  
+  <%= link_to 'Logout', destroy_customer_session_get_path %> |
+      
     <% else %>
       <%= link_to 'Sign Up', new_customer_registration_path %>
       <%= link_to 'Login', new_customer_session_path %>
