--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,10 @@
   </head>
  <body>
   <%= render 'layouts/header' %>
-   <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
+    <% if flash[:notice] %>
+    <p class="notice"><%= custom_flash_message %></p>
   <% end %>
+  
 
   <%= yield %>
 </body>
