--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -32,6 +32,10 @@
     <%= form.label :city, "City" %>
     <%= form.text_field :city, class: "form-control", placeholder: "Enter city" %>
   </div>
+     <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
   <div class="form-group">
     <%= form.submit "Create customer", class: "btn btn-primary" %>
   </div>
