--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,17 @@
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
 </head>
-<body class="bg-light">
+<body class="bg-gray-100">
   <%= render 'layouts/header' %>
-  <div class="container mt-4">
+  <div class="container mx-auto mt-4">
     <% if flash[:notice] %>
-      <div class="alert alert-info"><%= flash[:notice] %></div>
+      <div class="alert alert-info bg-blue-100 border-t border-b border-blue-500 text-blue-700 px-4 py-3" role="alert">
+        <%= flash[:notice] %>
+      </div>
     <% end %>
     <%= yield %>
   </div>
   <%= javascript_include_tag 'application', 'data-turbo-track': 'reload' %>
 </body>
 </html>
+
